--- a/package.json
+++ b/package.json
@@ -9,10 +9,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@mobile-reality/react-native-select-pro": "^1.13.1",
+    "@react-native-picker/picker": "2.4.8",
+    "@react-navigation/material-bottom-tabs": "^6.2.10",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
+    "axios": "^1.2.1",
     "expo": "~47.0.8",
+    "expo-document-picker": "~11.0.1",
+    "expo-font": "^11.0.1",
+    "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
+    "form-data": "^4.0.0",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-ionicons": "^4.6.5",
+    "react-native-multiple-select": "^0.5.12",
+    "react-native-paper": "^5.0.2",
+    "react-native-paper-dates": "^0.11.0",
+    "react-native-picker-select": "^8.0.4",
+    "react-native-preload": "^1.0.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^11.26.0",
+    "react-native-youtube": "^2.0.2",
+    "react-native-youtube-iframe": "^2.2.2",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0"
+  },
+  "resolutions": {
+    "react-native-picker-select/@react-native-picker/picker": "^2.4.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
