--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~47.0.8",
     "expo-document-picker": "~11.0.1",
     "expo-font": "^11.0.1",
+    "expo-notifications": "^0.17.0",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
     "form-data": "^4.0.0",
