--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.7",
     "axios": "^1.2.1",
     "expo": "~47.0.8",
+    "expo-device": "^5.0.0",
     "expo-document-picker": "~11.0.1",
     "expo-font": "^11.0.1",
     "expo-notifications": "^0.17.0",
@@ -37,7 +38,8 @@
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.2.2",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "expo-image-picker": "~14.0.2"
   },
   "resolutions": {
     "react-native-picker-select/@react-native-picker/picker": "^2.4.8"
