--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-youtube-iframe": "^2.2.2",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
-    "expo-image-picker": "~14.0.2"
+    "expo-image-picker": "~14.0.2",
+    "expo-secure-store": "~12.0.0"
   },
   "resolutions": {
     "react-native-picker-select/@react-native-picker/picker": "^2.4.8"
