--- a/eas.json
+++ b/eas.json
@@ -11,7 +11,9 @@
       }
     },
     "preview3": {
-      "developmentClient": true
+      "ios": {
+        "simulator": true
+      }
     },
     "production": {}
   }
