--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "expo-image-picker": "~14.0.2",
-    "expo-secure-store": "~12.0.0"
+    "expo-secure-store": "~12.0.0",
+    "expo-updates": "~0.15.6"
   },
   "resolutions": {
     "react-native-picker-select/@react-native-picker/picker": "^2.4.8"
