--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mobile-reality/react-native-select-pro": "^1.13.1",
+    "@react-native-community/datetimepicker": "^6.7.1",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/material-bottom-tabs": "^6.2.10",
     "@react-navigation/native": "^6.1.1",
@@ -19,12 +20,16 @@
     "expo-device": "^5.0.0",
     "expo-document-picker": "~11.0.1",
     "expo-font": "^11.0.1",
+    "expo-image-picker": "~14.0.2",
     "expo-notifications": "^0.17.0",
+    "expo-secure-store": "~12.0.0",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
     "form-data": "^4.0.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-datepicker": "^1.7.2",
     "react-native-ionicons": "^4.6.5",
     "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.0.2",
@@ -38,10 +43,7 @@
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.2.2",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0",
-    "expo-image-picker": "~14.0.2",
-    "expo-secure-store": "~12.0.0",
-    "expo-updates": "~0.15.6"
+    "redux": "^4.2.0"
   },
   "resolutions": {
     "react-native-picker-select/@react-native-picker/picker": "^2.4.8"
